Update author selection

--- a/book_stats.ipynb
+++ b/book_stats.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
        "'\\nBooks dataset source\\n\\n@InProceedings{lahiri:2014:SRW,\\n  author    = {Lahiri, Shibamouli},\\n  title     = {{Complexity of Word Collocation Networks: A Preliminary Structural Analysis}},\\n  booktitle = {Proceedings of the Student Research Workshop at the 14th Conference of the European Chapter of the Association for Computational Linguistics},\\n  month     = {April},\\n  year      = {2014},\\n  address   = {Gothenburg, Sweden},\\n  publisher = {Association for Computational Linguistics},\\n  pages     = {96--105},\\n  url       = {http://www.aclweb.org/anthology/E14-3011}\\n}\\n'"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
        " 'Alexander Pope']"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
        "4          703  "
       ]
      },
-     "execution_count": 121,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "(6072, 3)"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
        "5        R M Ballantyne      5596709"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
        "Name: author, dtype: object"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -80518,97 +80518,53 @@
     "\n",
     "As the reference we can use \"Federalists Papers\" used at \"Inference in an authorship problem\" study of Frederick Mosteller and David L. Wallace. Analyzed text together accounts for around 180 000 words. \n",
     "\n",
-    "Choose 10 authors to be analyzed:\n",
+    "Choose 5 authors to be analyzed:\n",
     "- At least 200 000 total words count in the dataset\n",
-    "- Different writing genres\n",
-    "- Use one arbitrary writing type for each of the authors"
+    "- Stick to novel writings\n",
+    "\n",
+    "Below we can find the list of the chosen authors and exluded books that may not fit into the novel category."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "authors_10 = {\n",
-    "    \"Alexander Pope\": [                                     # Poetry\n",
-    "        \"The Poetical Works of Alexander Pope, Volume 1\",\n",
-    "        \"The Poetical Works of Alexander Pope, Volume 2\",\n",
-    "        \"The Rape of the Lock and Other Poems\"\n",
+    "authors_5 = {                                              # Author : [Exluded books]                                                        \n",
+    "    \"Joseph Conrad\": [],   \n",
+    "    \"Zane Grey\": [],\n",
+    "    \"William Henry Hudson\": [],      \n",
+    "    \"Benjamin Disraeli\": [  \n",
+    "        \"Count Alarcos\"   \n",
+    "    ],                            \n",
+    "    \"Lucy Maud Montgomery\": [                               \n",
+    "        \"Lucy Maud Montgomery Short Stories, 1896 to 1901\",\n",
+    "        \"Lucy Maud Montgomery Short Stories, 1902 to 1903\",\n",
+    "        \"Lucy Maud Montgomery Short Stories, 1904\",\n",
+    "        \"Lucy Maud Montgomery Short Stories, 1905 to 1906\",\n",
+    "        \"Lucy Maud Montgomery Short Stories, 1907 to 1908\",\n",
+    "        \"Lucy Maud Montgomery Short Stories, 1909 to 1922\",\n",
     "    ],\n",
-    "    \"Alfred Russel Wallace\": [\"*\"],                         # Science\n",
-    "    \"Benjamin Franklin\": [\"*\"],                             # Autobiography\n",
-    "    \"Daniel Defoe\": [                                       # Adventure\n",
-    "        \"The Further Adventures of Robinson Crusoe\", \n",
-    "        \"The Life and Adventures of Robinson Crusoe\",\n",
-    "        \"The Life and Adventures of Robinson Crusoe (1808)\",\n",
-    "        \"The Life and Adventures of Robinson Crusoe Of York, Mariner, Vol. 1\",\n",
-    "        \"The Life and Most Surprising Adventures of Robinson Crusoe\"       \n",
-    "    ],                                  \n",
-    "    \"Joseph Conrad\": [\"*\"],                                 # Novels\n",
-    "    \"Lucy Maud Montgomery\": [                               # Children's Literature\n",
-    "        \"Anne Of Avonlea\",\n",
-    "        \"Anne Of Green Gables\",\n",
-    "        \"Anne Of The Island\",\n",
-    "        \"Anne's House of Dreams\",\n",
-    "    ],\n",
-    "    \"William Makepeace Thackeray\": [                        # Satire\n",
-    "        \"Vanity Fair\",\n",
-    "        \"The Book of Snobs\",\n",
-    "        \"Barry Lyndon\"\n",
-    "    ],\n",
-    "    \"Sir Winston Churchill\": [                              # History\n",
-    "        \"London to Ladysmith via Pretoria\",\n",
-    "        \"The River War\",\n",
-    "        \"The Story of the Malakand Field Force\"\n",
-    "    ],\n",
-    "    \"Oscar Wilde\": [                                        # Plays\n",
-    "        \"A Woman of No Importance\",\n",
-    "        \"An Ideal Husband\",\n",
-    "        \"La Sainte Courtisane\",\n",
-    "        \"Lady Windermere's Fan\",\n",
-    "        \"The Duchess of Padua\",\n",
-    "        \"The Importance of Being Earnest\",\n",
-    "        \"Vera\"\n",
-    "    ],\n",
-    "    \"Ralph Waldo Emerson\": [                                # Essays\n",
-    "        \"Essays, First Series\",\n",
-    "        \"Essays, Second Series\",\n",
-    "        \"Essays\"\n",
-    "    ]\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "def filter_books(df, authors_books):\n",
-    "    for author, books in authors_books.items():\n",
-    "        if books != [\"*\"]:\n",
-    "            df.drop(df[(df['author'] == author) & (~df['book'].isin(books))].index, inplace=True)"
+    "    for author, exluded_books in authors_books.items():\n",
+    "        df = df[~((df['author'] == author) & (df['book'].isin(exluded_books)))]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\piotr\\AppData\\Local\\Temp\\ipykernel_11620\\374980536.py:4: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -80637,100 +80593,70 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>Zane Grey</td>\n",
+       "      <td>2353362</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
        "      <td>Joseph Conrad</td>\n",
        "      <td>2141653</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Daniel Defoe</td>\n",
-       "      <td>699613</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Alfred Russel Wallace</td>\n",
-       "      <td>696576</td>\n",
+       "      <td>Benjamin Disraeli</td>\n",
+       "      <td>1695897</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>William Makepeace Thackeray</td>\n",
-       "      <td>492733</td>\n",
+       "      <td>Lucy Maud Montgomery</td>\n",
+       "      <td>1343932</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Lucy Maud Montgomery</td>\n",
-       "      <td>350104</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Benjamin Franklin</td>\n",
-       "      <td>307676</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Sir Winston Churchill</td>\n",
-       "      <td>298279</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Alexander Pope</td>\n",
-       "      <td>255928</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Ralph Waldo Emerson</td>\n",
-       "      <td>225434</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Oscar Wilde</td>\n",
-       "      <td>144794</td>\n",
+       "      <td>William Henry Hudson</td>\n",
+       "      <td>1060531</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        author  words_count\n",
-       "0                Joseph Conrad      2141653\n",
-       "1                 Daniel Defoe       699613\n",
-       "2        Alfred Russel Wallace       696576\n",
-       "3  William Makepeace Thackeray       492733\n",
-       "4         Lucy Maud Montgomery       350104\n",
-       "5            Benjamin Franklin       307676\n",
-       "6        Sir Winston Churchill       298279\n",
-       "7               Alexander Pope       255928\n",
-       "8          Ralph Waldo Emerson       225434\n",
-       "9                  Oscar Wilde       144794"
+       "                 author  words_count\n",
+       "0             Zane Grey      2353362\n",
+       "1         Joseph Conrad      2141653\n",
+       "2     Benjamin Disraeli      1695897\n",
+       "3  Lucy Maud Montgomery      1343932\n",
+       "4  William Henry Hudson      1060531"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_10 = df[df['author'].isin(authors_10.keys())]\n",
-    "filter_books(df_10, authors_10)\n",
-    "df_10_total_sorted = get_df_grouped_by_author(df_10)\n",
-    "df_10_total_sorted.head(10)"
+    "df_5 = df[df['author'].isin(authors_5.keys())]\n",
+    "filter_books(df_5, authors_5)\n",
+    "df_5_total_sorted = get_df_grouped_by_author(df_5)\n",
+    "df_5_total_sorted.head(10)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To fit previously set contraints, above 10 authors has been chosen along with their books that will be analyzed. Exception has been made in the case of Oscar Wilde. As the we would like to have plays genre in the set, but don't have enough data for that, we included ~150 000 of words of Oscar Wilde written in play style.\n",
+    "To fit previously set contraints, above 5 authors has been chosen along with their books that will be analyzed. Exception has been made in the case of Oscar Wilde. As the we would like to have plays genre in the set, but don't have enough data for that, we included ~150 000 of words of Oscar Wilde written in play style.\n",
     "\n",
     "Data about selected authors is saved in `res/books/selected` directory."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_authors = df_10_total_sorted['author'].tolist()\n",
+    "selected_authors = df_5_total_sorted['author'].tolist()\n",
     "os.makedirs(selected_books_dir, exist_ok=True)\n",
     "with open(selected_authors_list_filepath, 'w', encoding='utf-8') as f:\n",
     "    f.write('\\n'.join(selected_authors))"
@@ -80738,11 +80664,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_10.to_csv(selected_books_csv_filepath, index=False)"
+    "df_5.to_csv(selected_books_csv_filepath, index=False)"
    ]
   }
  ],
