Move config to the file

--- a/book_stats.ipynb
+++ b/book_stats.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,18 +22,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
-    "import plotly.express as px"
+    "import plotly.express as px\n",
+    "from src import Configuration "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +43,7 @@
        "'\\nBooks dataset source\\n\\n@InProceedings{lahiri:2014:SRW,\\n  author    = {Lahiri, Shibamouli},\\n  title     = {{Complexity of Word Collocation Networks: A Preliminary Structural Analysis}},\\n  booktitle = {Proceedings of the Student Research Workshop at the 14th Conference of the European Chapter of the Association for Computational Linguistics},\\n  month     = {April},\\n  year      = {2014},\\n  address   = {Gothenburg, Sweden},\\n  publisher = {Association for Computational Linguistics},\\n  pages     = {96--105},\\n  url       = {http://www.aclweb.org/anthology/E14-3011}\\n}\\n'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,24 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res_dir = 'res/'\n",
-    "all_books_dir = f'{res_dir}books/all/'\n",
-    "all_books_data_dir = f'{all_books_dir}/data/'\n",
-    "all_authors_list_filepath = f'{all_books_dir}/author_list'\n",
-    "all_books_csv_filepath = f'{all_books_dir}/books.csv'\n",
-    "\n",
-    "selected_books_dir = f'{res_dir}books/selected'\n",
-    "selected_authors_list_filepath = f'{selected_books_dir}/author_list'\n",
-    "selected_books_csv_filepath = f'{selected_books_dir}/books.csv'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -97,13 +81,13 @@
        " 'Alexander Pope']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "authors = open(all_authors_list_filepath, 'r', encoding='utf-8').read().split('\\n')\n",
+    "authors = open(Configuration.ALL_AUTHORS_FILEPATH, 'r', encoding='utf-8').read().split('\\n')\n",
     "authors[:5]"
    ]
   },
@@ -116,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +180,7 @@
        "4          703  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,9 +189,9 @@
     "df = pd.DataFrame(columns=['author', 'book', 'words_count'])\n",
     "\n",
     "for author_name in authors:\n",
-    "    author_book_files = [f for f in os.listdir(all_books_data_dir) if f.startswith(author_name)]\n",
+    "    author_book_files = [f for f in os.listdir(Configuration.ALL_BOOK_DATA_DIR) if f.startswith(author_name)]\n",
     "    for book_files in author_book_files:\n",
-    "        with open(f'{all_books_data_dir}{book_files}', 'r', encoding='utf-8') as f:\n",
+    "        with open(f'{Configuration.ALL_BOOK_DATA_DIR / book_files}', 'r', encoding='utf-8') as f:\n",
     "            words_count = len(f.read().split())\n",
     "            book_name = book_files.removeprefix(f'{author_name}___').removesuffix('.txt')\n",
     "            df.loc[len(df)] = [author_name, book_name, words_count]\n",
@@ -217,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +210,7 @@
        "(6072, 3)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,11 +228,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(all_books_csv_filepath, index=False)"
+    "df.to_csv(Configuration.ALL_BOOKS_CSV_FILEPATH, index=False)"
    ]
   },
   {
@@ -260,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +323,7 @@
        "5        R M Ballantyne      5596709"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +354,7 @@
        "Name: author, dtype: object"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -80527,7 +80511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80551,7 +80535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80562,7 +80546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -80629,7 +80613,7 @@
        "4  William Henry Hudson      1060531"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80645,30 +80629,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To fit previously set contraints, above 5 authors has been chosen along with their books that will be analyzed. Exception has been made in the case of Oscar Wilde. As the we would like to have plays genre in the set, but don't have enough data for that, we included ~150 000 of words of Oscar Wilde written in play style.\n",
+    "To fit previously set contraints, above 5 authors has been chosen along with their books that will be analyzed.\n",
     "\n",
     "Data about selected authors is saved in `res/books/selected` directory."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "selected_authors = df_5_total_sorted['author'].tolist()\n",
-    "os.makedirs(selected_books_dir, exist_ok=True)\n",
-    "with open(selected_authors_list_filepath, 'w', encoding='utf-8') as f:\n",
+    "os.makedirs(Configuration.SELECTED_BOOKS_DIR, exist_ok=True)\n",
+    "with open(Configuration.SELECTED_AUTHORS_FILEPATH, 'w', encoding='utf-8') as f:\n",
     "    f.write('\\n'.join(selected_authors))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_5.to_csv(selected_books_csv_filepath, index=False)"
+    "df_5.to_csv(Configuration.SELECTED_AUTHORS_CSV_FILEPATH, index=False)"
    ]
   }
  ],
