Fix book_stats notebook

--- a/book_stats.ipynb
+++ b/book_stats.ipynb
@@ -13,18 +13,17 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%capture\n",
-    "%pip install pandas\n",
-    "%pip install plotly # other libraries, indicated by the errors, would need to be installed"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\piotr\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -34,41 +33,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nBooks dataset source\\n\\n@InProceedings{lahiri:2014:SRW,\\n  author    = {Lahiri, Shibamouli},\\n  title     = {{Complexity of Word Collocation Networks: A Preliminary Structural Analysis}},\\n  booktitle = {Proceedings of the Student Research Workshop at the 14th Conference of the European Chapter of the Association for Computational Linguistics},\\n  month     = {April},\\n  year      = {2014},\\n  address   = {Gothenburg, Sweden},\\n  publisher = {Association for Computational Linguistics},\\n  pages     = {96--105},\\n  url       = {http://www.aclweb.org/anthology/E14-3011}\\n}\\n'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "'''\n",
-    "Books dataset source\n",
-    "\n",
-    "@InProceedings{lahiri:2014:SRW,\n",
-    "  author    = {Lahiri, Shibamouli},\n",
-    "  title     = {{Complexity of Word Collocation Networks: A Preliminary Structural Analysis}},\n",
-    "  booktitle = {Proceedings of the Student Research Workshop at the 14th Conference of the European Chapter of the Association for Computational Linguistics},\n",
-    "  month     = {April},\n",
-    "  year      = {2014},\n",
-    "  address   = {Gothenburg, Sweden},\n",
-    "  publisher = {Association for Computational Linguistics},\n",
-    "  pages     = {96--105},\n",
-    "  url       = {http://www.aclweb.org/anthology/E14-3011}\n",
-    "}\n",
-    "'''"
+    "configuration = Configuration()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -81,13 +55,13 @@
        " 'Alexander Pope']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "authors = FileUtils.read_authors(Configuration.ALL_AUTHORS_FILEPATH)\n",
+    "authors = open(configuration.all_authors_filepath, 'r', encoding='utf-8').read().split('\\n')\n",
     "authors[:5]"
    ]
   },
@@ -100,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +154,7 @@
        "4          703  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +162,7 @@
    "source": [
     "df = pd.DataFrame(columns=['author', 'book', 'words_count'])\n",
     "\n",
-    "for author_name, books in FileUtils.read_books(authors, Configuration.ALL_BOOK_DATA_DIR).items():\n",
+    "for author_name, books in FileUtils.read_books(authors, configuration.all_book_data_directory).items():\n",
     "    for book in books:\n",
     "        words_count = len(book['content'].split())\n",
     "        df.loc[len(df)] = [author_name, book[\"title\"], words_count]\n",
@@ -198,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +181,7 @@
        "(6072, 3)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,11 +199,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(Configuration.ALL_BOOKS_CSV_FILEPATH, index=False)"
+    "df.to_csv(configuration.all_books_csv_filepath, index=False)"
    ]
   },
   {
@@ -241,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +294,7 @@
        "5        R M Ballantyne      5596709"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +325,7 @@
        "Name: author, dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -79404,7 +79378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79428,7 +79402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79439,7 +79413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -79506,7 +79480,7 @@
        "4  William Henry Hudson      1060531"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79529,23 +79503,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "selected_authors = df_5_total_sorted['author'].tolist()\n",
-    "os.makedirs(Configuration.SELECTED_BOOKS_DIR, exist_ok=True)\n",
-    "with open(Configuration.SELECTED_AUTHORS_FILEPATH, 'w', encoding='utf-8') as f:\n",
+    "os.makedirs(configuration.selected_books_dir, exist_ok=True)\n",
+    "with open(configuration.selected_authors_filepath, 'w', encoding='utf-8') as f:\n",
     "    f.write('\\n'.join(selected_authors))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_5.to_csv(Configuration.SELECTED_AUTHORS_CSV_FILEPATH, index=False)"
+    "df_5.to_csv(configuration.selected_books_csv_filepath, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "Books dataset source\n",
+    "\n",
+    "@InProceedings{lahiri:2014:SRW,\n",
+    "  author    = {Lahiri, Shibamouli},\n",
+    "  title     = {{Complexity of Word Collocation Networks: A Preliminary Structural Analysis}},\n",
+    "  booktitle = {Proceedings of the Student Research Workshop at the 14th Conference of the European Chapter of the Association for Computational Linguistics},\n",
+    "  month     = {April},\n",
+    "  year      = {2014},\n",
+    "  address   = {Gothenburg, Sweden},\n",
+    "  publisher = {Association for Computational Linguistics},\n",
+    "  pages     = {96--105},\n",
+    "  url       = {http://www.aclweb.org/anthology/E14-3011}\n",
+    "}\n",
+    "'''"
    ]
   }
  ],
