Delete old config

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,9 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\piotr\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "c:\\Projects\\Thesis\\.venv\\Lib\\site-packages\\pydantic\\_internal\\_fields.py:151: UserWarning: Field \"model_names\" has conflict with protected namespace \"model_\".\n",
+      "\n",
+      "You may be able to resolve this warning by setting `model_config['protected_namespaces'] = ()`.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "import src\n",
@@ -28,25 +42,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "configuration = Configuration()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "authors = []\n",
-    "for author_name in FileUtils.read_authors(Configuration.SELECTED_AUTHORS_FILEPATH):\n",
+    "for author_name in FileUtils.read_authors(configuration.selected_authors_filepath):\n",
     "    author = Author(name=author_name)\n",
-    "    author.read_book_collection(Configuration.ALL_BOOK_DATA_DIR)\n",
-    "    author.read_generated_texts(Configuration.MODELS_DATA_DIR)\n",
+    "    author.read_book_collection(configuration.all_book_data_directory)\n",
+    "    author.read_generated_texts(configuration.model_dirs)\n",
     "    authors.append(author)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "analysis = Analysis(Configuration.SIZE_ANALYSIS)\n",
+    "analysis = Analysis(configuration.analysis_size)\n",
     "analysis_data = analysis.analyze(authors)"
    ]
   },
